--- a/index.html
+++ b/index.html
@@ -5,40 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Novare - Consultoria de Investimentos</title>
-    <meta name="description" content="Soluções inteligentes para seus investimentos.">
+    <meta name="description" content="Soluções inteligentes para seus investimentos e gestão de patrimônio.">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://novareforms.lovable.app/">
+    <meta property="og:url" content="https://marketingcastriani-ia.github.io/NOVAREFORMSDOSITE/">
     <meta property="og:title" content="Novare - Consultoria de Investimentos">
-    <meta property="og:description" content="Especialistas em gestão financeira e crescimento de patrimônio.">
+    <meta property="og:description" content="Especialistas em consultoria financeira personalizada.">
     
-    <meta property="og:image" content="https://raw.githubusercontent.com/SEU_USUARIO/SEU_REPOSITORIO/main/LOGO%20NOVARE.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/marketingcastriani-IA/NOVAREFORMSDOSITE/main/LOGO%20NOVARE.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <meta http-equiv="refresh" content="0; url=https://novareforms.lovable.app/">
 
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-        .loader {
-            text-align: center;
-        }
+        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background: #fff; }
+        .msg { text-align: center; color: #666; }
     </style>
 </head>
 <body>
-
-    <div class="loader">
-        <p>Redirecionando para Novare Consultoria...</p>
-        <p>Se não for redirecionado, <a href="https://novareforms.lovable.app/">clique aqui</a>.</p>
+    <div class="msg">
+        <p>Carregando Novare Consultoria...</p>
+        <p>Se não for redirecionado em 2 segundos, <a href="https://novareforms.lovable.app/">clique aqui</a>.</p>
     </div>
-
 </body>
 </html>
